# Stock-Predictor

./: AAPL.joblib  Dockerfile  LICENSE  README.md  StockPredictor.ipynb  backtest.py  et1.py  logging.py  main.py  pyproject.toml  schemas.py  streamlit_app.py  test_backtest.py  test_features.py
artifacts/: MSFT.joblib
src/: eval.py  features.py  model.py  tune.py
src/api/: service.py
src/core/: settings.py
test/: test_threshold.py
