[tool.poetry]
name = "stock-predictor"
version = "0.2.0"
description = "Streamlit stock predictor with calibrated probabilities, next-day forecast, FastAPI service, and FAANG-grade infra"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "~1.26"
pandas = "~2.2"
scikit-learn = "~1.4"
yfinance = "~0.2.50"
joblib = "~1.3"
pyyaml = "~6.0"
python-dateutil = "~2.9"
streamlit = "~1.35"
pydantic = "^2.8"
pydantic-settings = "^2.3"
loguru = "^0.7"
fastapi = "^0.112.0"
uvicorn = {version="^0.30.0", extras=["standard"]}
prometheus-client = "^0.20.0"
optuna = "^3.6.1"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
duckdb = "^1.0.0"
pyarrow = "^16.1.0"
pandera = "^0.20.4"
plotly = "^5.23.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.5.7"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
types-PyYAML = "^6.0.12.20240808"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C4","W"]
ignore = ["E203"]
fix = true
target-version = "py311"

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
files = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
